SCSS: fix table background color in Dark Mode.

--- a/_sass/color_schemes/circuitversedark.scss
+++ b/_sass/color_schemes/circuitversedark.scss
@@ -13,3 +13,4 @@ $base-button-color: $grey-dk-250;
 $code-background-color: $grey-dk-250;
 $base-svg-path: #026e57;
 $feedback-color: darken($sidebar-color, 3%);
+$table-background-color: #171326;
